增加 BaseWindow、CarList、LogList、SystemConfig

--- a/src/LongManager/LongManager.csproj
+++ b/src/LongManager/LongManager.csproj
@@ -74,6 +74,18 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\CarList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\LogList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\SystemConfig.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\UserEdit.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -89,6 +101,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Pages\BasePage.cs" />
+    <Compile Include="Pages\BaseWindow.cs" />
+    <Compile Include="Pages\CarList.xaml.cs">
+      <DependentUpon>CarList.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\LogList.xaml.cs">
+      <DependentUpon>LogList.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\SystemConfig.xaml.cs">
+      <DependentUpon>SystemConfig.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\UserEdit.xaml.cs">
       <DependentUpon>UserEdit.xaml</DependentUpon>
     </Compile>
