--- a/src/LongManager/LongManager.csproj
+++ b/src/LongManager/LongManager.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Pages\Welcome.xaml.cs">
       <DependentUpon>Welcome.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Port\LongSerialPort.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
