--- a/src/LongManager/LongManager.csproj
+++ b/src/LongManager/LongManager.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Xml" />
@@ -106,6 +107,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\Car\CarNOPrint.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\Label\LabelList.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -144,6 +149,9 @@
     </Compile>
     <Compile Include="Pages\Car\CarList.xaml.cs">
       <DependentUpon>CarList.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Car\CarNOPrint.xaml.cs">
+      <DependentUpon>CarNOPrint.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\Label\LabelList.xaml.cs">
       <DependentUpon>LabelList.xaml</DependentUpon>
@@ -372,6 +380,9 @@
     </PackageReference>
     <PackageReference Include="System.Xml.XDocument">
       <Version>4.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="Zen.Barcode.Rendering.Framework">
+      <Version>3.1.10729.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
