--- a/src/LongManager/LongManager.csproj
+++ b/src/LongManager/LongManager.csproj
@@ -120,6 +120,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\EMS\EMSList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\EMS\EMSSearch.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -165,6 +169,9 @@
     </Compile>
     <Compile Include="Pages\Car\CarNOPrint.xaml.cs">
       <DependentUpon>CarNOPrint.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\EMS\EMSList.xaml.cs">
+      <DependentUpon>EMSList.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\EMS\EMSSearch.xaml.cs">
       <DependentUpon>EMSSearch.xaml</DependentUpon>
