--- a/src/LongManagerWeb/appsettings.json
+++ b/src/LongManagerWeb/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LongWeb": "Server=127.0.0.1;Port=3306;DataBase=LongWeb;uid=sa;pwd=11111;"
+  }
 }
