--- a/src/LongManagerWeb.Core/LongManagerWeb.Core.csproj
+++ b/src/LongManagerWeb.Core/LongManagerWeb.Core.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.15" />
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.15" />
+    <PackageReference Include="MySql.Data.EntityFrameworkCore.Design" Version="8.0.15" />
+  </ItemGroup>
+
 </Project>
