--- a/src/LongManagerWeb/LongManagerWeb.csproj
+++ b/src/LongManagerWeb/LongManagerWeb.csproj
@@ -934,11 +934,15 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
   </ItemGroup>
 
 
   <ItemGroup>
     <ProjectReference Include="..\LongManagerWeb.Core\LongManagerWeb.Core.csproj" />
   </ItemGroup>
+
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="http://json.schemastore.org/azure-iot-edge-deployment-template-1.0" /></VisualStudio></ProjectExtensions>
 
 </Project>
