--- a/src/LongManagerClient/LongManagerClient.csproj
+++ b/src/LongManagerClient/LongManagerClient.csproj
@@ -227,7 +227,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CefSharp.Wpf">
-      <Version>71.0.0</Version>
+      <Version>71.0.2</Version>
     </PackageReference>
     <PackageReference Include="log4net">
       <Version>2.0.8</Version>
@@ -239,10 +239,10 @@
       <Version>2.5.0.1205</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers">
-      <Version>2.2.1</Version>
+      <Version>2.2.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
-      <Version>2.2.1</Version>
+      <Version>2.2.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design">
       <Version>1.1.6</Version>
@@ -258,6 +258,9 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Quartz">
+      <Version>3.0.7</Version>
     </PackageReference>
     <PackageReference Include="SQLitePCLRaw.bundle_green">
       <Version>1.1.13</Version>
@@ -353,7 +356,7 @@
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.Extensions">
-      <Version>4.3.0</Version>
+      <Version>4.3.1</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.Handles">
       <Version>4.3.0</Version>
