--- a/src/LongManagerWeb/log4net.config
+++ b/src/LongManagerWeb/log4net.config
@@ -1,16 +1,13 @@
 ﻿<log4net>
 
   <root>
-    <level value="ALL" ref="infoAppender" />
-    <appender-ref ref="infoAppender" />
-    <appender-ref ref="errorAppender" />
-    <appender-ref ref="debugAppender" />
+    <appender-ref ref="Appender" />
   </root>
 
   <!-- 日志的等级，它们由高到底分别为： OFF > FATAL > ERROR > WARN > INFO > DEBUG > ALL -->
   <!--信息日志配置-->
-  <appender name="infoAppender" type="log4net.Appender.RollingFileAppender">
-    <param name="File" value="Logs/info.log" />
+  <appender name="Appender" type="log4net.Appender.RollingFileAppender">
+    <param name="File" value="logs/.log" />
     <param name="AppendToFile" value="true" />
     <param name="MaxFileSize" value="10240" />
     <param name="MaxSizeRollBackups" value="100" />
@@ -21,47 +18,5 @@
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
     </layout>
-    <filter type="log4net.Filter.LevelRangeFilter">
-      <param name="LevelMin" value="INFO" />
-      <param name="LevelMax" value="INFO" />
-    </filter>
-  </appender>
-
-  <!--调试日志配置-->
-  <appender name="debugAppender" type="log4net.Appender.RollingFileAppender">
-    <param name="File" value="Logs/debug.log" />
-    <param name="AppendToFile" value="true" />
-    <param name="MaxFileSize" value="10240" />
-    <param name="MaxSizeRollBackups" value="100" />
-    <param name="PreserveLogFileNameExtension" value="true" />
-    <param name="StaticLogFileName" value="false" />
-    <param name="DatePattern" value="yyyyMMdd" />
-    <param name="RollingStyle" value="Date" />
-    <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
-    </layout>
-    <filter type="log4net.Filter.LevelRangeFilter">
-      <param name="LevelMin" value="DEBUG" />
-      <param name="LevelMax" value="DEBUG" />
-    </filter>
-  </appender>
-
-  <!--错误日志配置-->
-  <appender name="errorAppender" type="log4net.Appender.RollingFileAppender">
-    <param name="File" value="Logs/err.log" />
-    <param name="AppendToFile" value="true" />
-    <param name="MaxFileSize" value="10240" />
-    <param name="MaxSizeRollBackups" value="100" />
-    <param name="PreserveLogFileNameExtension" value="true" />
-    <param name="StaticLogFileName" value="false" />
-    <param name="DatePattern" value="yyyyMMdd" />
-    <param name="RollingStyle" value="Date" />
-    <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
-    </layout>
-    <filter type="log4net.Filter.LevelRangeFilter">
-      <param name="LevelMin" value="ERROR" />
-      <param name="LevelMax" value="ERROR" />
-    </filter>
   </appender>
 </log4net>
