--- a/src/LongManagerClient.Core/LongManagerClient.Core.csproj
+++ b/src/LongManagerClient.Core/LongManagerClient.Core.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.2" />
     <PackageReference Include="EPPlus" Version="4.5.3.1" />
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.4" />
